# Novi

./: README.md  novi.ini  okapi.ini  pyproject.toml  sample_data.sql  schema.sql
src/novi/client/: __init__.py  client_base.py  database.py  dbclient.py  flag.py  remoteclient.py
src/novi/client/activations/: __init__.py  activation_util.py  and_activation.py  base_combination_activation.py  composite_and_activation.py  date_time_activation.py  or_activation.py  weighted_random_activation.py
src/novi/core/: README.md  __init__.py  composite_and_activation.py  models.py
src/novi/web/: README.md  __init__.py  evaluated_flags_endpoint.py  flags_endpoint.py  routes.py
src/novi_activations/standard/: date_time_activation.py  weighted_random_activation.py
src/okapi/client/: __init__.py  client_base.py  database.py  dbclient.py  remoteclient.py
src/okapi/core/: README.md  __init__.py  composite_and_activation.py  models.py
src/okapi/web/: README.md  __init__.py  routes.py
src/okapi_activations/standard/: date_time_activation.py  weighted_random_activation.py
tests/: logging.conf  test_client_flag.py  test_composite_activations.py  test_date_time_activation.py  test_ini.py  test_weighted_random_activation.py
tests/novi_activations/: activation1.py  activation2.py
tests/novi_activations/sub_package/: activation3.py
tests/okapi_activations/: activation1.py  activation2.py
tests/okapi_activations/sub_package/: activation3.py
