[tool.poetry]
name = "novi"
version = "0.4.0"
description = "A simple yet powerful feature flag and multivariate testing platform built in Python"
authors = ["vdevigere <vdevigere+git@gmail.com>"]
readme = "README.md"
packages = [
    {include = "novi", from="src"},
]
include=[
   {path = "src/novi_activations"},
]
license="GPL-3.0-only"
homepage="https://github.com/vdevigere/Novi"
repository="https://github.com/vdevigere/Novi"
documentation="https://github.com/vdevigere/Novi"
classifiers=[
"Programming Language :: Python",
"Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
Flask = "^3.0.0"
SQLAlchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
